--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Libre+Baskerville|Varela);
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -59,71 +60,154 @@ table {
   border-spacing: 0;
 }
 
-/* line 51, ../scss/style.scss */
-body {
-  padding: 20px;
+/*
+        mixins
+ */
+/*
+        includes
+ */
+@-webkit-keyframes pulse-pending {
+  /* line 80, ../scss/style.scss */
+  0% {
+    background-color: #ffcc6f;
+  }
+
+  /* line 83, ../scss/style.scss */
+  50% {
+    background-color: orange;
+  }
+
+  /* line 86, ../scss/style.scss */
+  100% {
+    background-color: #ffcc6f;
+  }
 }
 
-/* line 55, ../scss/style.scss */
-h1, h2 {
-  text-transform: uppercase;
-}
+@keyframes pulse-pending {
+  /* line 80, ../scss/style.scss */
+  0% {
+    background-color: #ffcc6f;
+  }
 
-/* line 59, ../scss/style.scss */
-h1 {
-  margin-bottom: 20px;
-  text-align: center;
-}
+  /* line 83, ../scss/style.scss */
+  50% {
+    background-color: orange;
+  }
 
-/* line 64, ../scss/style.scss */
-h2 {
-  margin-bottom: 10px;
-}
-
-/* line 68, ../scss/style.scss */
-a {
-  color: #000;
-  text-decoration: none;
-}
-
-/* line 73, ../scss/style.scss */
-.l-content {
-  overflow-y: auto;
+  /* line 86, ../scss/style.scss */
+  100% {
+    background-color: #ffcc6f;
+  }
 }
 
 /*
-	module branch
- */
-/* line 81, ../scss/style.scss */
-.m-branch {
-  padding: 20px;
-  border-bottom: 1px solid #CCC;
+	settings
+*/
+/* line 99, ../scss/style.scss */
+* {
+  box-sizing: border-box;
 }
 
-/* line 86, ../scss/style.scss */
-.m-branch-events {
-  height: 100px;
-  overflow-y: auto;
-}
-
-/* line 91, ../scss/style.scss */
-.m-branch-event {
-  opacity: 0.4;
-  margin-bottom: 10px;
-}
-/* line 94, ../scss/style.scss */
-.m-branch-event a {
-  color: red;
-}
-/* line 97, ../scss/style.scss */
-.m-branch-event:first-child {
-  opacity: 1;
-}
-/* line 100, ../scss/style.scss */
-.m-branch-event.is-success a {
-  color: green;
-}
 /* line 103, ../scss/style.scss */
-.m-branch-event.is-pending a {
-  color: orange;
+body {
+  background-color: white;
+  padding: 20px;
+  color: white;
+  text-align: center;
+  font-family: 'Libre Baskerville', serif;
+}
+
+/* line 111, ../scss/style.scss */
+h1 {
+  font-size: 2.5vw;
+  margin-bottom: 40px;
+}
+
+/* line 116, ../scss/style.scss */
+h2 {
+  font-size: 2vmax;
+}
+
+/* line 120, ../scss/style.scss */
+h3 {
+  font-size: 2vmax;
+  padding-bottom: 20px;
+}
+
+/* line 125, ../scss/style.scss */
+a {
+  text-decoration: none;
+  color: white;
+}
+
+/* line 130, ../scss/style.scss */
+.l-content {
+  background-color: #222222;
+}
+
+/*
+  module header
+*/
+/* line 138, ../scss/style.scss */
+.m-header {
+  background-color: #222222;
+}
+/* line 140, ../scss/style.scss */
+.m-header h1 {
+  display: inline-block;
+  background-color: white;
+  padding: 20px 40px;
+  color: #666666;
+}
+
+/*
+  module branch
+*/
+/* line 152, ../scss/style.scss */
+.m-branch {
+  padding: 10px;
+}
+
+/* line 156, ../scss/style.scss */
+.m-branch-events {
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+
+/* line 162, ../scss/style.scss */
+.m-branch-event {
+  margin: 30px 0;
+  overflow: hidden;
+}
+
+/* line 167, ../scss/style.scss */
+.m-branch-event-image {
+  float: left;
+}
+
+/* line 171, ../scss/style.scss */
+.m-branch-event-desc {
+  padding: 10px;
+  font-size: 5vw;
+  display: block;
+}
+
+/* line 177, ../scss/style.scss */
+.is-success {
+  background-color: #4faa4f;
+}
+
+/* line 181, ../scss/style.scss */
+.is-error {
+  background-color: #ad3a3a;
+}
+
+/* line 185, ../scss/style.scss */
+.is-pending {
+  -webkit-animation-name: pulse-pending;
+  -webkit-animation-duration: 3s;
+  -webkit-animation-iteration-count: infinite;
+  animation-name: pulse-pending;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
 }
