--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,60 +47,141 @@ table {
 	border-spacing: 0;
 }
 
+@import url(http://fonts.googleapis.com/css?family=Libre+Baskerville|Varela);
 
-body{
-	padding: 20px;
+/*
+        mixins
+ */
+
+@mixin keyframes($animationName) {
+    @-webkit-keyframes #{$animationName} {
+        @content;
+    }
+    @keyframes #{$animationName} {
+        @content;
+    }
 }
 
-h1, h2{
-	text-transform: uppercase;
-}
+@mixin animation ($name, $duration, $count) {
+    -webkit-animation-name: $name;
+    -webkit-animation-duration: $duration;
+    -webkit-animation-iteration-count: $count;
 
-h1{
-	margin-bottom: 20px;
-	text-align: center;
-}
-
-h2{
-	margin-bottom: 10px;
-}
-
-a{
-	color: #000;
-	text-decoration: none;
-}
-
-.l-content{
-	overflow-y: auto;
+    animation-name: $name;
+    animation-duration: $duration;
+    animation-iteration-count: $count;
 }
 
 /*
-	module branch
+        includes
  */
 
+@include keyframes(pulse-pending) {
+    0% {
+            background-color: rgb(255, 204, 111);
+    }
+    50% {
+            background-color:orange;
+    }
+    100% {
+            background-color: rgb(255, 204, 111);
+    }
+}
+
+/*
+	settings
+*/
+
+$c-1 : #fff;
+$c-2 : #222;
+$c-3 : #666;
+
+*{
+  box-sizing: border-box;
+}
+
+body{
+  background-color: $c-1;
+  padding: 20px;
+  color: $c-1;
+  text-align: center;
+  font-family: 'Libre Baskerville', serif;
+}
+
+h1{
+  font-size: 2.5vw;
+  margin-bottom: 40px;
+}
+
+h2{
+  	font-size: 2vmax;
+}
+
+h3{
+	font-size: 2vmax;
+	padding-bottom: 20px
+}
+
+a{
+  text-decoration: none;
+  color: $c-1;
+}
+
+.l-content{
+  background-color: $c-2;
+}
+
+/*
+  module header
+*/
+
+.m-header{
+  background-color: $c-2;
+  h1{
+    display: inline-block;
+    background-color: $c-1;
+    padding: 20px 40px;
+    color: $c-3;
+  }
+}
+
+/*
+  module branch
+*/
+
 .m-branch{
-	padding: 20px;
-	border-bottom: 1px solid #CCC;
+  padding: 10px;
 }
 
 .m-branch-events{
-	height: 100px;
-	overflow-y: auto;
+  overflow: hidden;
+    margin-bottom: 30px;
+
 }
 
 .m-branch-event{
-	opacity: 0.4;
-	margin-bottom: 10px;
-	a{
-		color: red;
-	}
-	&:first-child{
-		opacity: 1;
-	}
-	&.is-success a{
-		color: green;
-	}
-	&.is-pending a{
-		color: orange;
-	}
+  margin: 30px 0;
+  overflow: hidden;
+}
+
+.m-branch-event-image{
+  float: left;
+}
+
+.m-branch-event-desc{
+  padding: 10px;
+  font-size: 5vw;
+  display: block;
+}
+
+.is-success{
+  background-color: rgb(79, 170, 79);
+}
+
+.is-error{
+  background-color: rgb(173, 58, 58);
+}
+
+.is-pending{
+  @include animation(pulse-pending, 3s, infinite);
 }
