--- a/scss/style.scss
+++ b/scss/style.scss
@@ -94,11 +94,15 @@ table {
 
 $c-1 : #fff;
 $c-2 : #222;
-$c-3 : #666;
+$c-3 : #757575;
 
 *{
   box-sizing: border-box;
 }
+
+html, body{
+	height: 100%;
+}	
 
 body{
   background-color: $c-1;
@@ -129,6 +133,7 @@ a{
 
 .l-content{
   background-color: $c-2;
+  height: 100%;
 }
 
 /*
