--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,11 @@ table {
 }
 
 /* line 103, ../scss/style.scss */
+html, body {
+  height: 100%;
+}
+
+/* line 107, ../scss/style.scss */
 body {
   background-color: white;
   padding: 20px;
@@ -117,92 +122,93 @@ body {
   font-family: 'Libre Baskerville', serif;
 }
 
-/* line 111, ../scss/style.scss */
+/* line 115, ../scss/style.scss */
 h1 {
   font-size: 2.5vw;
   margin-bottom: 40px;
 }
 
-/* line 116, ../scss/style.scss */
+/* line 120, ../scss/style.scss */
 h2 {
   font-size: 2vmax;
 }
 
-/* line 120, ../scss/style.scss */
+/* line 124, ../scss/style.scss */
 h3 {
   font-size: 2vmax;
   padding-bottom: 20px;
 }
 
-/* line 125, ../scss/style.scss */
+/* line 129, ../scss/style.scss */
 a {
   text-decoration: none;
   color: white;
 }
 
-/* line 130, ../scss/style.scss */
+/* line 134, ../scss/style.scss */
 .l-content {
   background-color: #222222;
+  height: 100%;
 }
 
 /*
   module header
 */
-/* line 138, ../scss/style.scss */
+/* line 143, ../scss/style.scss */
 .m-header {
   background-color: #222222;
 }
-/* line 140, ../scss/style.scss */
+/* line 145, ../scss/style.scss */
 .m-header h1 {
   display: inline-block;
   background-color: white;
   padding: 20px 40px;
-  color: #666666;
+  color: #757575;
 }
 
 /*
   module branch
 */
-/* line 152, ../scss/style.scss */
+/* line 157, ../scss/style.scss */
 .m-branch {
   padding: 10px;
 }
 
-/* line 156, ../scss/style.scss */
+/* line 161, ../scss/style.scss */
 .m-branch-events {
   overflow: hidden;
   margin-bottom: 30px;
 }
 
-/* line 162, ../scss/style.scss */
+/* line 167, ../scss/style.scss */
 .m-branch-event {
   margin: 30px 0;
   overflow: hidden;
 }
 
-/* line 167, ../scss/style.scss */
+/* line 172, ../scss/style.scss */
 .m-branch-event-image {
   float: left;
 }
 
-/* line 171, ../scss/style.scss */
+/* line 176, ../scss/style.scss */
 .m-branch-event-desc {
   padding: 10px;
   font-size: 5vw;
   display: block;
 }
 
-/* line 177, ../scss/style.scss */
+/* line 182, ../scss/style.scss */
 .is-success {
   background-color: #4faa4f;
 }
 
-/* line 181, ../scss/style.scss */
+/* line 186, ../scss/style.scss */
 .is-error {
   background-color: #ad3a3a;
 }
 
-/* line 185, ../scss/style.scss */
+/* line 190, ../scss/style.scss */
 .is-pending {
   -webkit-animation-name: pulse-pending;
   -webkit-animation-duration: 3s;
